# python-discord-bot

./: setup.cfg
discord_bot/: cli.py
