[metadata]
name = python-flask-discord-bot
version = 0.0.0
description = Discord bot written in Python with Flask
author = Kevin Lago
author_email = Kevinthelago@gmail.com
url = https://github.com/Kevin-Lago/python-flask-discord-bot

[options]
packages = find:

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    discord-bot-cli = discord_bot.cli:main
